# ESP32-IDF-LVGL-Clock-Alarm

./: .gitignore  .gitmodules  README.md  sdkconfig
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
components/lvgl/: lv_conf.h  lv_conf_backup.h
components/lvgl/lvgl/src/: lv_conf_internal.h
components/lvgl/lvgl/src/hal/: lv_hal_disp.c
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_tft/: CMakeLists.txt  GC9A01.c  disp_spi.c  hx8357.c  il3820.c  ili9341.c  ili9481.c  ili9486.c  ili9488.c  ra8875.c  sh1107.c  st7735s.c  st7789.c
components/lvgl_esp32_drivers/lvgl_touch/: ft6x36.c  tp_spi.h
components/square_line/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
esp32-lvgl-tft35-ili9488/: CMakeLists.txt
main/: CMakeLists.txt  _1_external_button_on_screen.c  _3_keyboard_on_chip.c  _4_rotary_encoder.c  _5_rotary_encoder_button.c  _6_task_with_rtos.c  _7_task_with_rtos_semaphore.c  main.c
main/lvgl_app/: glvgl.c  glvgl_widget.c  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_wifi_search_sized_png.c
